--- a/index.html
+++ b/index.html
@@ -26,9 +26,11 @@
     </style>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg bg-light">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container">
-        <!-- <a class="navbar-brand" href="#">Navbar</a> -->
+        <a class="navbar-brand p-0" href="/">
+          <img src="DP.png" alt="DP" width="40" >
+        </a>
         <button
           class="navbar-toggler"
           type="button"
