--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>https://DmitriPanichin.github.io/</title>
+    <title>Home</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -15,6 +15,10 @@
       integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
       crossorigin="anonymous"
     ></script>
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="manifest" href="/site.webmanifest">
     <style>
       .rounded-img {
         width: 60%;
@@ -29,7 +33,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container">
         <a class="navbar-brand p-0" href="/">
-          <img src="DP.png" alt="DP" width="40" >
+          <img src="DP.png" alt="DP" width="40" />
         </a>
         <button
           class="navbar-toggler"
@@ -45,10 +49,10 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link active" aria-current="page" href="/">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Favorite places</a>
+              <a class="nav-link" href="places.html">Favorite places</a>
             </li>
           </ul>
         </div>
@@ -64,15 +68,15 @@
             conducting manual and automated tests to ensure a high standard of
             software applications and processes.
           </p>
-          <a href="https://999.md/ru/" target="_blank" class="btn btn-primary">
-            999.md
+          <a href="https://www.linkedin.com/in/dmitri-panichin-9810a1110/" target="_blank" class="btn btn-primary">
+            www.linkedin.com
           </a>
           <a
-            href="https:/facebook.com/"
+            href="https://github.com/DmitriPanichin?tab=repositories"
             target="_blank"
             class="btn btn-secondary"
           >
-            facebook.com
+            github.com
           </a>
         </div>
       </div>
